twigの字下げをタブ2つに変更

--- a/app/Resources/views/top/index.html.twig
+++ b/app/Resources/views/top/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>ツラミドットコム</h1>
+  <h1>ツラミドットコム</h1>
+  {#<script src="https://unpkg.com/vue@2.3.3"></script>#}
 {% endblock %}
 
 {% block stylesheets %}
