--- a/app/Resources/views/my/index.html.twig
+++ b/app/Resources/views/my/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-  <h1>私のツラミ</h1>
+  <h1>私のツラミ（最新1000件）</h1>
   <form action="{{ path('my') }}" method="post">
     <label for="tsurami">ツラミ</label>
     <input type="text" id="tsurami" name="tsurami" value=""/>
