--- a/app/Resources/views/top/index.html.twig
+++ b/app/Resources/views/top/index.html.twig
@@ -3,6 +3,8 @@
 {% block body %}
   <h1>ツラミドットコム</h1>
   {#<script src="https://unpkg.com/vue@2.3.3"></script>#}
+  <strong>{{ tsurami.text }}</strong>
+
 {% endblock %}
 
 {% block stylesheets %}
