ツラミが1件もない状態でトップページ開けない現象を修正、セッションの有効期限を長くする

--- a/app/Resources/views/top/index.html.twig
+++ b/app/Resources/views/top/index.html.twig
@@ -3,7 +3,10 @@
 {% block body %}
   <h1>ツラミドットコム</h1>
   {#<script src="https://unpkg.com/vue@2.3.3"></script>#}
-  <strong>{{ tsurami.text }}</strong>
+
+  {% if tsurami is not null %}
+    <strong>{{ tsurami.text }}</strong>
+  {% endif %}
 
 {% endblock %}
 
